--- a/index.html
+++ b/index.html
@@ -161,10 +161,11 @@
           style="--width: 50rem; --height: 15rem; --quantity: 3"
         >
           <div class="list"></div>
-          <div class="carousel--hearts"></div>
         </div>
+        <div class="carousel--hearts"></div>
       </section>
       <section class="content__posts">
+
         <div class="content__posts--text">
           <h2>In the wild</h2>
           <p>
@@ -197,12 +198,9 @@
             </div>
             <div class="card--text">
               <div class="card--text--container">
-                <span>May 3, 2021</span>
-                <h3>What is compounding?</h3>
-                <p>
-                  Compounding is the art and science of preparing personalized
-                  medications
-                </p>
+                <span>June 15, 2021</span>
+                <h3>Anxiety in Pets</h3>
+                <p>An interview with a top behavioral speacialist in NYC</p>
                 <a href="#">Read the article</a>
               </div>
             </div>
@@ -212,6 +210,9 @@
         <div class="content__posts--button">
           <button>View more</button>
         </div>
+
+        <div class="content__posts__decoration--left"></div>
+        <div class="content__posts__decoration--right"></div>
       </section>
     </main>
     <footer class="footer">
